[tool.poetry]
name = "hopper"
version = "1.6.1"
description = "The loose roo hops redirects"
authors = ["datadave <605409+datadavev@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0"
httpx = "^0"
json-logging = "^1.3.0"

[tool.poetry.scripts]
roo = "hopper.__main__:main"

[tool.poetry_bumpversion.file."hopper/__init__.py"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
uvicorn = "^0"

#[tool.poetry-dynamic-versioning]
# Use POETRY_DYNAMIC_VERSIONING_BYPASS env var to set
# and run "poetry dynamic-versioning" to update code entries.
#enable = true
#vcs = "git"
#style = "semver"

#[build-system]
#requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
#build-backend = "poetry_dynamic_versioning.backend"

#[tool.poetry-dynamic-versioning.substitution]
#folders=[ {path="hopper"}]
